tests/error/modifier_errors/output_in_dagger.py
from guppylang import guppy
from guppylang.std.builtins import output



@guppy(daggerable=True)
def test() -> None:
    output("a", True)

test.compile()
