tests/error/modifier_errors/output_in_dagger.err
Error: Dagger constraint violation (at $FILE:8:4)
  | 
6 | @guppy(daggerable=True)
7 | def test() -> None:
8 |     output("a", True)
  |     ^^^^^^^^^^^^^^^^^ This function cannot be called in a daggerable context
  |                       because it is not daggerable itself

Guppy compilation failed due to 1 previous error
